# CppTest

./: !template.cpp  !template.cpp.template  .editorconfig  .gitignore  .gitmodules  C++_roadmap.md  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  Exists.sql  FAQ.md  JobTools.txt  README.md  Readme.md  Roadmap.md  Roadmap.py  Roadmap.sh  Roadmap2.md  StdTest.h  Stl.h  Stl.h.off  TEMPLATE.cpp.template  TODO.md  VirtualFriendFunction.cpp  conan_file.txt  conan_install_dev.sh  conan_profile_ubuntu_gcc.txt  eclipse.sh  gitignore_binaries.sh  test.html
!Todo/: C++ questions.txt  CppInterview400.md  TODO_Interview.txt
Algo/: std_sort.txt
Algos/: Algoritms.txt  BubbleSort.cpp  FAQ.md  InvertString.cpp  ReverseString.cpp  bogosort.cc  stl.cxx
ArrayToFunction/: ArrayToFunction2.cpp
Backend/: FAQ.md  TODO.md
BitMask/: BitMask.vcxproj  Main.cpp
Bits/: BitMask.cpp  BitMask2.cpp  BuffToint.cpp  bitset.cpp
Boost/: Bind.cpp
C/: Atoi.cpp  BuffZero.cpp  ConvertTime.cpp  FAQ.md  IsAlphaLocale.cpp  IsAlphaRu.cpp  Printf.cpp  Strftime.cpp  Strptime.cpp  Strtol.cpp  Time.cpp  TimeFormat.cpp  VSnprintf.cpp
CMake/: CMakeLists.txt  Usage.txt
CString/: CString.h  CString.vcxproj  main.cpp
Cast/: BoolCast.cpp  Casts.cpp  ReinterpretCast.cpp
Char/: Escape.cpp  IntToChar.cpp
Chars/: Chars.vcxproj
Class/: CallMethod.cpp  CondtructorOrder.cpp  ConstructOrder.cpp  CopyConstructor1.cpp  CpoyConstructor2.cpp  EmptyStructSizeOf.cpp  FriendClass.cpp  InheritanceFunctions.cpp  InitConstructor.cpp  InitOrder.cpp  MethodWithoutBody.cpp  QuotedString.java  SizeOfClass.cpp  inheritanceFunctions.cpp
ClassFactory/: main.cpp
ClassHierarchy/: ClassHierarchy.vcxproj
ClassInitOrder/: main.cpp
ConstructOrder/: main.cpp
Core/: BoolCast.cpp  Casts.cpp  ConstructNew.cpp  ConstructOrder.cpp  DoubleCompare.cpp  DoubleLimits  DoubleLimits.cpp  EmptyStructSizeOf.cpp  Explicit.cpp  FAQ.md  Gcc_LambdaLeaky.cpp  GoTo.cpp  InitMembers.cpp  InitVars.cpp  LambdaPtrsSizes.cpp  LvalueRvalue.cpp  Maps.cpp  Move.cpp  Move2.cpp  MoveRef.cpp  NamespaceOperator.cpp  OperatorsNewDelete.cpp  PlacementNew.cpp  RefMove.cpp  ReturnBool.cpp  SwitchString.cpp  TODO.md  TypeNames.cpp  TypeSizes.cpp  Union.cpp  ValueInitialization.cpp  VariableArguments.cpp  ZeroDivision.cpp  int_double_compare.cpp
Cpp/: ConstKeywords.md  ReturnBool.cpp  SwitchString.cpp  TODO.md
CstrNull/: .cproject  .project
CxHandle/: CxHandle.vcxproj  main.cpp
DecInc/: DecInc.vcproj  main.cpp
DevOps/: FAQ.md
Double/: DoubleCast.cpp  DoubleCompare.cpp  IntDoubleCompare.cpp  IsGreater.cpp
Enum/: CodeStyle.cpp  EnumSize.cpp  For.cpp  ForEnum.cpp  SafeEnum.cpp  SizeOf.cpp
EnumCodeStyle/: Main.cpp
Etc/: DecIncInt.cpp  DoubleCompare.cpp  FunctionDefinition.cpp  GlobalVar1.cpp  GlobalVar2.cpp  Random.cpp  ReinterpretCast.cpp  SizeOfClass.cpp  SizeofUnicodes.cpp  UnicodeAnsi.cpp  VarVisibility.cpp  unicodeAnsi.cpp
Exceptions/: CxWinException.cpp  CxWinException.h  Exception2.cpp  Try.cpp
FAQ/: Books.md  CppInterview400_dou.ua.md  CppQuestions.md  FAQ.md  FAQ.txt  Polymorphism.txt  Questions.txt  README.md  RSDN.md  Template instantiation.txt  Template specialization.txt
Feedback/: FAQ.md  TODO.md
For/: Main.cpp
ForBreak/: main.cpp
Front/: FAQ.md
Ftprintf/: Ftprintf.cbproj  Ftprintf.vcproj
FunctionPointer/: FunctionPointer.cpp
Functor/: .cproject  .project  Functor.cpp  Functor.vcxproj  FunctorExample1.cpp  FunctorTarget.cpp  NativeFunction.cpp  StaticFunctor.cpp  main.cpp
FunctorStatic/: FunctorStatic.vcxproj
GlobalLocalVars/: .cproject  .project
GlobalLocalVars2/: Main.cpp
Idioms/: CopyAndSwap.cpp  CopyOnWrite.cpp  DependencyInjection.cpp  DependencyInversion.cpp  EraseRemove.cpp  FAQ.md  GoTo.cpp  IteratorPair.cpp  NamedConstructor.cpp  NamedParameter.cpp  NamedParameterByStruct.cpp  NamedParameterByThis.cpp  NonCopyableMixin.cpp  NonThrowingSwap.cpp  Raii.cpp  Rule0.h  Rule3Copy.h  Rule3Move.h  Rule5.h  RuleOf5.h  Rvo.cpp  RvoDisabled.cpp  ScopeGuard.cpp  ShrinkToFit.cpp  SmallObjectOptimization.cpp  VirtualFriendFunction.cpp
InheritanceFunctions/: InheritanceFunctions.vcproj  main.cpp
Interview/: C++ self-evaluation form v.3.5.xlsx  GamePoint.docx  InvisibleCRM.rtf  Luxoft-WebOS.txt  Offers.txt  QML_techrequ.gui.docx  Softek.doc  Ukrnet.docx
IpcMt/: FAQ.md  IpcMethods.md  IpcMethods.txt  PSigInfo.cpp  TODO.md  ThreadHarwareConcurrency.cpp  condition_variable.cpp  future.cxx  lambda.cxx  packaged_task.cxx  psiginfo.cpp  signal.cpp  signal_ctrl_c.cpp  signal_stacktrace.cpp  threads.cxx
IsBot/: IsBot.vcproj  __Black_list (test).lst  main.cpp
Libs/: FAQ.md  TODO.md
LogAppend/: LogAppend.vcproj  main.cpp
Loops/: For.cpp  ForBreak.cpp  ForVoid.cpp  GoToLablel.cpp  SwitchCase.cpp
MT_IPC/: condition_variable.cpp  psiginfo.cpp  signal.cpp  signal_stacktrace.cpp
Network/: FAQ.md  IpString.cpp  Mount.cpp  TcpUdpDiffs.md  TcpUdpDiffs.txt  mount.cpp
NumericLimits/: NumericLimits.vcproj
OOD/: FAQ.md
OOP/: FAQ.md  TODO.md
OperatorExclamation/: Main.cpp
Operators/: OperatorIn.cpp  OverloadingArithmeticOperator.cpp  OverloadingArithmeticOperatorUsingMemberFunction.cpp  OverloadingInputOutputOperator.cpp  OverloadingPostfixIncermentDecrementOperator.cpp
Patterns/: AntiPatterns.md  FAQ.md  builder.cpp  chain_of_responsibility.cpp  composite.cpp  facade.cpp  factory_method.cpp  interpreter.cpp  mediator.cpp  prototype.cpp  proxy.cpp  singleton.cpp  state.cpp  strategy.cpp  template_method.cpp  visitor1.cpp  visitor2.cpp
Pointers/: AutoPtr.h  CatchPtr.hpp  FunctionPtr  FunctionPtr.cpp  xPTR_DELETE.cpp
Practice/: FAQ.md
PreproccessCompile/: FAQ.md
PrivateVirtual/: Main.cpp  PrivateVirtual.vcxproj
Python/: AbstractClass.py  FAQ.md  InheritentCtorDtor.py  SubprocessCommunicateAsync.py
Qt/: HttpUpload.cpp
RandomNumber/: RandomNumber.vcproj
Regexp/: pcrepp.cpp
ReinterpretCast/: ReinterpretCast.vcproj  main.cpp
Review/: FAQ.md  TODO.md
SCM_CICD/: FAQ.md
SQL/: AnyAll.sql  Case.sql  Count.sql  DbInfo.sql  Duplicates.sql  FAQ.md  GroupBy.sql  GroupByHours.sql  Having.sql  Increment.sql  (+12 more)
(+1105 files in other folders)
